--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -196,6 +195,7 @@ allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 173.230.142.131;
+allow 173.249.57.253;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
@@ -269,7 +269,6 @@ allow 185.129.61.7;
 allow 185.129.61.8;
 allow 185.129.61.9;
 allow 185.129.62.62;
-allow 185.129.62.63;
 allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
@@ -682,6 +681,7 @@ allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.51.52;
 allow 198.98.52.24;
+allow 198.98.53.136;
 allow 198.98.54.49;
 allow 198.98.60.90;
 allow 199.195.248.184;
@@ -952,6 +952,7 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
+allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
 allow 2605:6400:10:1ab:2605:6400:10:1ab;
@@ -1090,6 +1091,7 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
+allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
@@ -1196,7 +1198,6 @@ allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:11:7::2;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
-allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
@@ -1437,6 +1438,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.195.208.111;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1575,7 +1577,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.204.213.56;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
