--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -34,6 +35,11 @@ allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
 allow 107.174.138.172;
+allow 107.181.245.162;
+allow 107.181.245.163;
+allow 107.181.245.164;
+allow 107.181.245.165;
+allow 107.181.245.166;
 allow 107.189.10.175;
 allow 107.189.11.111;
 allow 107.189.11.113;
@@ -247,6 +253,7 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
+allow 185.10.16.41;
 allow 185.106.102.102;
 allow 185.106.94.195;
 allow 185.107.57.64;
@@ -269,6 +276,7 @@ allow 185.129.61.7;
 allow 185.129.61.8;
 allow 185.129.61.9;
 allow 185.129.62.62;
+allow 185.129.62.63;
 allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
@@ -632,7 +640,6 @@ allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.160;
 allow 193.218.118.173;
-allow 193.218.118.178;
 allow 193.218.118.181;
 allow 193.218.118.182;
 allow 193.218.118.188;
@@ -1198,6 +1205,7 @@ allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:11:7::2;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
+allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
@@ -1418,7 +1426,6 @@ allow 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
-allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1438,7 +1445,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.195.208.111;
+allow 3.229.225.166;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1734,6 +1741,10 @@ allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
 allow 94.16.121.91;
+allow 94.177.106.37;
+allow 94.177.106.46;
+allow 94.177.106.54;
+allow 94.177.106.59;
 allow 94.228.163.25;
 allow 94.228.169.70;
 allow 94.230.208.147;
@@ -1751,6 +1762,7 @@ allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.244.28;
+allow 95.245.154.39;
 allow 96.126.98.146;
 allow 96.27.198.133;
 allow 96.42.26.63;
