--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -393,6 +393,7 @@ deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:11:7::2;
 deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
+deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
@@ -613,7 +614,6 @@ deny 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
-deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
