--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -34,6 +35,11 @@ set_real_ip_from 104.244.79.44;
 set_real_ip_from 104.244.79.50;
 set_real_ip_from 104.244.79.61;
 set_real_ip_from 107.174.138.172;
+set_real_ip_from 107.181.245.162;
+set_real_ip_from 107.181.245.163;
+set_real_ip_from 107.181.245.164;
+set_real_ip_from 107.181.245.165;
+set_real_ip_from 107.181.245.166;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.11.113;
@@ -247,6 +253,7 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
+set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.57.64;
@@ -269,6 +276,7 @@ set_real_ip_from 185.129.61.7;
 set_real_ip_from 185.129.61.8;
 set_real_ip_from 185.129.61.9;
 set_real_ip_from 185.129.62.62;
+set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.44.108;
 set_real_ip_from 185.130.44.43;
 set_real_ip_from 185.130.47.58;
@@ -632,7 +640,6 @@ set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.218.118.133;
 set_real_ip_from 193.218.118.160;
 set_real_ip_from 193.218.118.173;
-set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.181;
 set_real_ip_from 193.218.118.182;
 set_real_ip_from 193.218.118.188;
@@ -1198,6 +1205,7 @@ set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:11:7::2;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
+set_real_ip_from 2a06:d380:0:103::63;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
@@ -1418,7 +1426,6 @@ set_real_ip_from 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
 set_real_ip_from 2a0f:e586:f:f:9491:941d:caf5:50e7;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
-set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1438,7 +1445,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.195.208.111;
+set_real_ip_from 3.229.225.166;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.190.85;
@@ -1734,6 +1741,10 @@ set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
+set_real_ip_from 94.177.106.37;
+set_real_ip_from 94.177.106.46;
+set_real_ip_from 94.177.106.54;
+set_real_ip_from 94.177.106.59;
 set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
@@ -1751,6 +1762,7 @@ set_real_ip_from 95.164.4.104;
 set_real_ip_from 95.164.46.204;
 set_real_ip_from 95.168.173.143;
 set_real_ip_from 95.211.244.28;
+set_real_ip_from 95.245.154.39;
 set_real_ip_from 96.126.98.146;
 set_real_ip_from 96.27.198.133;
 set_real_ip_from 96.42.26.63;
