--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.27.147.135;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 103.109.101.105;
@@ -6,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -173,7 +173,6 @@ allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
 allow 166.70.207.2;
-allow 167.99.208.41;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -728,7 +727,6 @@ allow 2001:620:20d0::20;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
-allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -868,7 +866,6 @@ allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
-allow 23.137.248.139;
 allow 23.137.248.69;
 allow 23.137.250.34;
 allow 23.137.250.83;
@@ -903,7 +900,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -930,14 +926,12 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
 allow 2602:f9f3:0:2::8d;
 allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
-allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
@@ -1080,6 +1074,7 @@ allow 2a00:1dc0:caff:99::d348;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c506::1;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1454,6 +1449,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.208.212.23;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1640,6 +1636,7 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.36;
 allow 82.153.138.182;
+allow 82.153.138.24;
 allow 82.197.182.161;
 allow 82.221.131.5;
 allow 82.221.131.71;
@@ -1696,7 +1693,6 @@ allow 91.139.160.150;
 allow 91.193.18.63;
 allow 91.202.5.104;
 allow 91.203.144.194;
-allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
@@ -1723,8 +1719,8 @@ allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.231.14;
 allow 93.95.231.88;
-allow 93.99.104.128;
 allow 93.99.104.138;
+allow 93.99.104.18;
 allow 93.99.104.194;
 allow 94.102.51.15;
 allow 94.140.115.63;
@@ -1758,7 +1754,6 @@ allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.244.28;
-allow 95.245.154.39;
 allow 96.126.98.146;
 allow 96.27.198.133;
 allow 96.42.26.63;
