--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -27,6 +27,7 @@ set_real_ip_from 2001:620:20d0::20;
 set_real_ip_from 2001:620:20d0::23;
 set_real_ip_from 2001:620:20d0::24;
 set_real_ip_from 2001:638:301:f732::150;
+set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
@@ -144,7 +145,6 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
-set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
@@ -270,7 +270,6 @@ set_real_ip_from 2a00:1dc0:caff:99::d348;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:5e0:36:c506::1;
-set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
@@ -283,7 +282,6 @@ set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
-set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
 set_real_ip_from 2a03:4000:15:928:dead:beef:ca1f:1337;
