Update lists at 20240613-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.27.73.165;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 103.109.101.105;
@@ -682,7 +683,6 @@ allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.51.52;
 allow 198.98.52.24;
-allow 198.98.53.136;
 allow 198.98.54.49;
 allow 198.98.60.90;
 allow 199.195.248.184;
@@ -716,7 +716,6 @@ allow 2001:41d0:701:1100::38fc;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
-allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
@@ -901,6 +900,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -927,6 +927,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -949,7 +950,6 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
-allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
 allow 2605:6400:10:1ab:2605:6400:10:1ab;
@@ -1434,12 +1434,10 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.232.161.5;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.190.85;
 allow 37.120.239.59;
-allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.131;
 allow 37.228.129.5;
@@ -1525,6 +1523,7 @@ allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
+allow 50.116.60.12;
 allow 51.15.249.160;
 allow 51.15.59.15;
 allow 51.158.115.62;
@@ -1622,7 +1621,6 @@ allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.102.164.109;
-allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
@@ -1718,6 +1716,7 @@ allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.231.14;
 allow 93.95.231.88;
+allow 93.99.104.128;
 allow 93.99.104.138;
 allow 93.99.104.194;
 allow 94.102.51.15;
