--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 100.27.73.165;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.117.167;
 set_real_ip_from 103.109.101.105;
@@ -682,7 +683,6 @@ set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.51.52;
 set_real_ip_from 198.98.52.24;
-set_real_ip_from 198.98.53.136;
 set_real_ip_from 198.98.54.49;
 set_real_ip_from 198.98.60.90;
 set_real_ip_from 199.195.248.184;
@@ -716,7 +716,6 @@ set_real_ip_from 2001:41d0:701:1100::38fc;
 set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
-set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
@@ -901,6 +900,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.165.104.119;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
@@ -927,6 +927,7 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::3d;
@@ -949,7 +950,6 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
-set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
@@ -1434,12 +1434,10 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.232.161.5;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.190.85;
 set_real_ip_from 37.120.239.59;
-set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.131;
 set_real_ip_from 37.228.129.5;
@@ -1525,6 +1523,7 @@ set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.38.255.27;
+set_real_ip_from 50.116.60.12;
 set_real_ip_from 51.15.249.160;
 set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.158.115.62;
@@ -1622,7 +1621,6 @@ set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.102.164.109;
-set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
@@ -1718,6 +1716,7 @@ set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
+set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.138;
 set_real_ip_from 93.99.104.194;
 set_real_ip_from 94.102.51.15;
