Update lists at 20240613-1500

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,4 +1,3 @@
-deny 100.27.73.165;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 103.109.101.105;
@@ -6,7 +5,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -203,7 +201,6 @@ deny 176.58.100.98;
 deny 176.97.114.202;
 deny 176.97.114.252;
 deny 178.162.209.56;
-deny 178.17.170.184;
 deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.171.106;
@@ -716,6 +713,7 @@ deny 2001:41d0:701:1100::38fc;
 deny 2001:41d0:701:1100::4f60;
 deny 2001:41d0:800:1f70::;
 deny 2001:41d0:801:2000::15bb;
+deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
@@ -1067,7 +1065,6 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
-deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:78::3b85;
 deny 2a00:1dc0:caff:8b::24bd;
@@ -1438,6 +1435,7 @@ deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.190.85;
 deny 37.120.239.59;
+deny 37.187.5.192;
 deny 37.228.129.128;
 deny 37.228.129.131;
 deny 37.228.129.5;
@@ -1572,6 +1570,7 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.235.132.96;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1621,6 +1620,7 @@ deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
 deny 79.102.164.109;
+deny 79.124.8.241;
 deny 79.137.198.213;
 deny 80.210.78.252;
 deny 80.241.60.207;
@@ -1716,7 +1716,6 @@ deny 93.95.228.205;
 deny 93.95.230.165;
 deny 93.95.231.14;
 deny 93.95.231.88;
-deny 93.99.104.128;
 deny 93.99.104.138;
 deny 93.99.104.194;
 deny 94.102.51.15;
@@ -1751,6 +1750,7 @@ deny 95.164.4.104;
 deny 95.164.46.204;
 deny 95.168.173.143;
 deny 95.211.244.28;
+deny 95.245.154.39;
 deny 96.126.98.146;
 deny 96.27.198.133;
 deny 96.42.26.63;
