--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,3 @@
-allow 100.27.73.165;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 103.109.101.105;
@@ -6,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -203,7 +201,6 @@ allow 176.58.100.98;
 allow 176.97.114.202;
 allow 176.97.114.252;
 allow 178.162.209.56;
-allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.171.106;
@@ -716,6 +713,7 @@ allow 2001:41d0:701:1100::38fc;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
+allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
@@ -1067,7 +1065,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:78::3b85;
 allow 2a00:1dc0:caff:8b::24bd;
@@ -1438,6 +1435,7 @@ allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.190.85;
 allow 37.120.239.59;
+allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.131;
 allow 37.228.129.5;
@@ -1572,6 +1570,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.235.132.96;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1621,6 +1620,7 @@ allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.102.164.109;
+allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
@@ -1716,7 +1716,6 @@ allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.231.14;
 allow 93.95.231.88;
-allow 93.99.104.128;
 allow 93.99.104.138;
 allow 93.99.104.194;
 allow 94.102.51.15;
@@ -1751,6 +1750,7 @@ allow 95.164.4.104;
 allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.244.28;
+allow 95.245.154.39;
 allow 96.126.98.146;
 allow 96.27.198.133;
 allow 96.42.26.63;
