Update lists at 20240614-2100

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -279,7 +279,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -631,7 +630,6 @@ deny 193.218.118.133;
 deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
-deny 193.218.118.181;
 deny 193.218.118.182;
 deny 193.218.118.188;
 deny 193.218.118.89;
@@ -1082,6 +1080,7 @@ deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:4780:14:517e::1;
 deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
@@ -1411,7 +1410,6 @@ deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:491a:cbe0:3511:bfd4;
-deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1434,7 +1432,7 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 34.236.68.17;
+deny 34.229.30.216;
 deny 35.0.127.52;
 deny 37.114.37.81;
 deny 37.1.201.144;
@@ -1550,6 +1548,7 @@ deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
 deny 5.255.104.202;
+deny 5.255.108.48;
 deny 5.255.111.64;
 deny 5.255.114.171;
 deny 5.255.115.58;
@@ -1590,6 +1589,7 @@ deny 62.133.45.2;
 deny 62.171.137.169;
 deny 62.182.83.179;
 deny 62.182.84.146;
+deny 62.72.11.248;
 deny 64.227.115.78;
 deny 66.146.193.33;
 deny 66.220.242.222;
