Update lists at 20240615-0300

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -280,7 +279,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1200,7 +1198,6 @@ allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-allow 2a0b:4140:5967::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1383,6 +1380,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:97c0:3e3:519::1;
 allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
@@ -1390,7 +1388,6 @@ allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
-allow 2a0e:fa00:0:d0::1;
 allow 2a0f:85c1:356:578f::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
@@ -1433,6 +1430,7 @@ allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
+allow 37.114.37.81;
 allow 37.1.201.144;
 allow 37.120.190.85;
 allow 37.120.239.59;
@@ -1500,7 +1498,6 @@ allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.9.148.219;
 allow 45.92.1.74;
 allow 45.94.31.180;
 allow 45.94.31.68;
@@ -1540,8 +1537,8 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.203.102.112;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1570,6 +1567,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.166.146.198;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1601,7 +1599,6 @@ allow 72.253.202.121;
 allow 74.82.47.194;
 allow 77.105.146.42;
 allow 77.220.196.253;
-allow 77.221.153.68;
 allow 77.221.157.237;
 allow 77.221.159.184;
 allow 77.221.159.189;
@@ -1633,7 +1630,6 @@ allow 82.118.242.36;
 allow 82.197.182.161;
 allow 82.221.131.5;
 allow 82.221.131.71;
-allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
