--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,7 +5,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -280,7 +279,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.165.190.111;
 deny 185.170.114.25;
@@ -1200,7 +1198,6 @@ deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-deny 2a0b:4140:5967::2;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1383,6 +1380,7 @@ deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0e:97c0:3e3:519::1;
 deny 2a0e:97c0:3ea:372::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
@@ -1390,7 +1388,6 @@ deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
-deny 2a0e:fa00:0:d0::1;
 deny 2a0f:85c1:356:578f::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
@@ -1433,6 +1430,7 @@ deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
 deny 35.0.127.52;
+deny 37.114.37.81;
 deny 37.1.201.144;
 deny 37.120.190.85;
 deny 37.120.239.59;
@@ -1500,7 +1498,6 @@ deny 45.80.158.205;
 deny 45.80.158.27;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.9.148.219;
 deny 45.92.1.74;
 deny 45.94.31.180;
 deny 45.94.31.68;
@@ -1540,8 +1537,8 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.203.102.112;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.190;
 deny 5.255.103.235;
@@ -1570,6 +1567,7 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.166.146.198;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1601,7 +1599,6 @@ deny 72.253.202.121;
 deny 74.82.47.194;
 deny 77.105.146.42;
 deny 77.220.196.253;
-deny 77.221.153.68;
 deny 77.221.157.237;
 deny 77.221.159.184;
 deny 77.221.159.189;
@@ -1633,7 +1630,6 @@ deny 82.118.242.36;
 deny 82.197.182.161;
 deny 82.221.131.5;
 deny 82.221.131.71;
-deny 82.221.139.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.115;
