Update lists at 20240617-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -658,6 +658,7 @@ allow 194.233.174.56;
 allow 194.26.192.77;
 allow 194.26.196.116;
 allow 194.26.196.71;
+allow 194.62.248.21;
 allow 195.160.220.104;
 allow 195.176.3.19;
 allow 195.176.3.20;
@@ -701,6 +702,7 @@ allow 199.195.253.247;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
+allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
@@ -871,6 +873,7 @@ allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.9;
+allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
@@ -897,7 +900,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.26.133.152;
 allow 23.94.211.25;
@@ -924,7 +926,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::8d;
@@ -1382,6 +1383,7 @@ allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3e3:519::1;
+allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
@@ -1430,6 +1432,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 3.230.195.21;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1446,7 +1449,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
-allow 44.223.231.140;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1649,6 +1651,7 @@ allow 85.93.218.204;
 allow 86.104.194.13;
 allow 87.118.110.27;
 allow 87.118.116.103;
+allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
 allow 88.209.197.213;
@@ -1677,7 +1680,6 @@ allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.139.160.150;
-allow 91.193.18.63;
 allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.206.26.26;
@@ -1708,6 +1710,7 @@ allow 93.95.228.205;
 allow 93.95.230.165;
 allow 93.95.231.14;
 allow 93.95.231.88;
+allow 93.99.104.128;
 allow 93.99.104.138;
 allow 93.99.104.18;
 allow 93.99.104.194;
