--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -1,6 +1,7 @@
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
+allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
@@ -122,7 +123,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::8d;
@@ -580,6 +580,7 @@ allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:3e3:519::1;
+allow 2a0e:97c0:3ea:372::1;
 allow 2a0e:97c0:3ea:bc::1;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
