Update lists at 20240617-1501

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -264,6 +264,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:78::3b85;
 allow 2a00:1dc0:caff:8b::24bd;
@@ -392,6 +393,7 @@ allow 2a06:1700:4:11:7::2;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
+allow 2a06:de01:200::23;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
