--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -202,6 +203,7 @@ allow 176.58.100.98;
 allow 176.97.114.202;
 allow 176.97.114.252;
 allow 178.162.209.56;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.171.106;
@@ -238,7 +240,6 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.233.141.59;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -1069,6 +1070,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:78::3b85;
 allow 2a00:1dc0:caff:8b::24bd;
@@ -1197,6 +1199,7 @@ allow 2a06:1700:4:11:7::2;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
+allow 2a06:de01:200::23;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
@@ -1437,6 +1440,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 3.217.116.24;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1507,6 +1511,7 @@ allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.85.15.23;
 allow 45.92.1.74;
 allow 45.94.31.180;
 allow 45.94.31.68;
@@ -1651,7 +1656,6 @@ allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
-allow 85.209.133.112;
 allow 85.215.76.62;
 allow 85.239.41.130;
 allow 85.93.218.204;
