Update lists at 20240618-1200

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,7 +5,6 @@ deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
 deny 103.172.134.26;
-deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.208.86.5;
 deny 103.251.167.10;
@@ -135,6 +134,7 @@ deny 143.110.156.176;
 deny 144.172.118.4;
 deny 144.172.118.55;
 deny 144.172.118.76;
+deny 144.172.118.90;
 deny 144.172.73.6;
 deny 144.217.80.80;
 deny 144.24.197.112;
@@ -204,8 +204,6 @@ deny 178.162.209.56;
 deny 178.17.170.184;
 deny 178.17.170.23;
 deny 178.17.171.102;
-deny 178.17.171.106;
-deny 178.17.171.118;
 deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.175.131.141;
@@ -299,7 +297,6 @@ deny 185.183.159.40;
 deny 185.191.204.254;
 deny 185.193.158.134;
 deny 185.193.52.180;
-deny 185.193.66.127;
 deny 185.195.237.238;
 deny 185.195.71.10;
 deny 185.195.71.11;
@@ -902,6 +899,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.236.122.62;
 deny 23.94.211.25;
 deny 2400:8901::f03c:93ff:fe68:23b3;
@@ -928,6 +926,7 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:12:759::1;
@@ -1041,6 +1040,7 @@ deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
+deny 2605:6400:d814:2775::;
 deny 2605:6400:d814:4181::1;
 deny 2605:a140:2186:5418::1;
 deny 2605:aa80:0:9::3;
@@ -1067,9 +1067,7 @@ deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
-deny 2a00:1dc0:caff:78::3b85;
 deny 2a00:1dc0:caff:8b::24bd;
-deny 2a00:1dc0:caff:99::d348;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:c506::1;
@@ -1435,6 +1433,7 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
+deny 3.210.42.17;
 deny 35.0.127.52;
 deny 37.114.37.81;
 deny 37.114.41.119;
@@ -1543,7 +1542,6 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.22.194.217;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.101.10;
