--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -135,6 +134,7 @@ allow 143.110.156.176;
 allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.76;
+allow 144.172.118.90;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
@@ -204,8 +204,6 @@ allow 178.162.209.56;
 allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
-allow 178.17.171.106;
-allow 178.17.171.118;
 allow 178.17.174.14;
 allow 178.17.174.164;
 allow 178.175.131.141;
@@ -299,7 +297,6 @@ allow 185.183.159.40;
 allow 185.191.204.254;
 allow 185.193.158.134;
 allow 185.193.52.180;
-allow 185.193.66.127;
 allow 185.195.237.238;
 allow 185.195.71.10;
 allow 185.195.71.11;
@@ -902,6 +899,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -928,6 +926,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:12:759::1;
@@ -1041,6 +1040,7 @@ allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
+allow 2605:6400:d814:2775::;
 allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
 allow 2605:aa80:0:9::3;
@@ -1067,9 +1067,7 @@ allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
-allow 2a00:1dc0:caff:78::3b85;
 allow 2a00:1dc0:caff:8b::24bd;
-allow 2a00:1dc0:caff:99::d348;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c506::1;
@@ -1435,6 +1433,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 3.210.42.17;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1543,7 +1542,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.22.194.217;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
