--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.208.86.5;
 allow 103.251.167.10;
@@ -135,6 +136,7 @@ allow 144.172.118.4;
 allow 144.172.118.55;
 allow 144.172.118.76;
 allow 144.172.118.90;
+allow 144.172.73.11;
 allow 144.172.73.6;
 allow 144.217.80.80;
 allow 144.24.197.112;
@@ -285,7 +287,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1428,12 +1429,12 @@ allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
+allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.210.42.17;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1441,6 +1442,7 @@ allow 37.1.201.144;
 allow 37.120.190.85;
 allow 37.120.239.59;
 allow 37.187.5.192;
+allow 37.220.86.167;
 allow 37.228.129.128;
 allow 37.228.129.131;
 allow 37.228.129.5;
@@ -1572,6 +1574,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.167.146.246;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1660,7 +1663,6 @@ allow 87.118.122.51;
 allow 87.120.254.132;
 allow 88.209.197.213;
 allow 88.80.20.86;
-allow 89.110.68.71;
 allow 89.147.108.209;
 allow 89.147.108.62;
 allow 89.147.108.90;
