Update lists at 20240619-0300

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -126,6 +126,8 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
+allow 2602:f9f3:0:2::8d;
+allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:1c9::1;
