--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -16,6 +16,7 @@ allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
+allow 104.219.232.126;
 allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -122,6 +123,7 @@ allow 130.193.15.186;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
+allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.98.11.62;
@@ -283,6 +285,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -840,6 +843,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 209.135.168.56;
 allow 209.141.32.198;
 allow 209.141.37.94;
 allow 209.141.46.203;
@@ -897,6 +901,7 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.236.122.62;
+allow 23.26.133.152;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
@@ -924,6 +929,8 @@ allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
+allow 2602:f9f3:0:2::8d;
+allow 2602:f9f3:0:2::91;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:19:1c9::1;
@@ -1427,7 +1434,6 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.224.219.110;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.1.201.144;
@@ -1565,6 +1571,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.225.234.217;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
