Update lists at 20240619-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -916,7 +916,6 @@ allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
-allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
@@ -1161,6 +1160,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
+allow 2a04:9dc0:31::c0cc:fb;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:121:33::1;
@@ -1190,6 +1190,7 @@ allow 2a06:1700:4:11:7::2;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
+allow 2a06:de01:200::23;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
@@ -1430,7 +1431,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.196.145.187;
+allow 3.215.6.109;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.1.201.144;
@@ -1491,7 +1492,6 @@ allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.22;
 allow 45.66.35.35;
-allow 45.79.144.222;
 allow 45.79.177.21;
 allow 45.79.50.161;
 allow 45.79.66.123;
@@ -1499,6 +1499,7 @@ allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.85.15.23;
 allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.223;
@@ -1586,7 +1587,6 @@ allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.147;
-allow 66.94.107.91;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
@@ -1634,6 +1634,7 @@ allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
+allow 83.97.20.251;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
