--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -916,7 +916,6 @@ set_real_ip_from 2.58.56.90;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:93ff:fe2b:34f6;
-set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
@@ -1161,6 +1160,7 @@ set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a04:9dc0:31::c0cc:73;
+set_real_ip_from 2a04:9dc0:31::c0cc:fb;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:121:33::1;
@@ -1190,6 +1190,7 @@ set_real_ip_from 2a06:1700:4:11:7::2;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
+set_real_ip_from 2a06:de01:200::23;
 set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
@@ -1430,7 +1431,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 34.196.145.187;
+set_real_ip_from 3.215.6.109;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.37.81;
 set_real_ip_from 37.1.201.144;
@@ -1491,7 +1492,6 @@ set_real_ip_from 45.66.35.20;
 set_real_ip_from 45.66.35.21;
 set_real_ip_from 45.66.35.22;
 set_real_ip_from 45.66.35.35;
-set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.79.177.21;
 set_real_ip_from 45.79.50.161;
 set_real_ip_from 45.79.66.123;
@@ -1499,6 +1499,7 @@ set_real_ip_from 45.80.158.205;
 set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.85.15.23;
 set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.223;
@@ -1586,7 +1587,6 @@ set_real_ip_from 64.227.115.78;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
 set_real_ip_from 66.78.40.147;
-set_real_ip_from 66.94.107.91;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.222;
@@ -1634,6 +1634,7 @@ set_real_ip_from 82.68.49.227;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.115;
+set_real_ip_from 83.97.20.251;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
