--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -120,7 +120,6 @@ allow 2402:1f00:8100:400::9;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:93ff:fe2b:34f6;
-allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
@@ -365,6 +364,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
+allow 2a04:9dc0:31::c0cc:fb;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:121:33::1;
@@ -394,6 +394,7 @@ allow 2a06:1700:4:11:7::2;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
+allow 2a06:de01:200::23;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
