--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -916,7 +916,6 @@ deny 2.58.56.90;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:93ff:fe2b:34f6;
-deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
@@ -1161,6 +1160,7 @@ deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
+deny 2a04:9dc0:31::c0cc:fb;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:121:33::1;
@@ -1190,6 +1190,7 @@ deny 2a06:1700:4:11:7::2;
 deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
+deny 2a06:de01:200::23;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
@@ -1430,7 +1431,7 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 34.196.145.187;
+deny 3.215.6.109;
 deny 35.0.127.52;
 deny 37.114.37.81;
 deny 37.1.201.144;
@@ -1491,7 +1492,6 @@ deny 45.66.35.20;
 deny 45.66.35.21;
 deny 45.66.35.22;
 deny 45.66.35.35;
-deny 45.79.144.222;
 deny 45.79.177.21;
 deny 45.79.50.161;
 deny 45.79.66.123;
@@ -1499,6 +1499,7 @@ deny 45.80.158.205;
 deny 45.80.158.27;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.85.15.23;
 deny 45.94.31.180;
 deny 45.94.31.68;
 deny 45.95.169.223;
@@ -1586,7 +1587,6 @@ deny 64.227.115.78;
 deny 66.146.193.33;
 deny 66.220.242.222;
 deny 66.78.40.147;
-deny 66.94.107.91;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
@@ -1634,6 +1634,7 @@ deny 82.68.49.227;
 deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.115;
+deny 83.97.20.251;
 deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.211.225.54;
